--- a/httpd.conf
+++ b/httpd.conf
@@ -3,3 +3,4 @@ php_value mysql.default.password
 php_value mysql.default.db       cln
 php_value mysql.default.host     localhost
 php_value mysql.default.port     3306
+SetEnv DATABASE_NAME testing
